--- a/index.html
+++ b/index.html
@@ -50,8 +50,14 @@
 
   <div class="gallery">
 
+        <div class="card">
+      <img src="img/IMG_4286.jpeg">
+      <div class="name">Ville</div>
+      <div class="furigana">ヴィル</div>
+    </div>
+
     <div class="card">
-      <img src="">
+      <img src="img/IMG_4284.jpeg">
       <div class="name">Fall</div>
       <div class="furigana">フォール</div>
     </div>
