--- a/index.html
+++ b/index.html
@@ -57,10 +57,22 @@
       <div class="furigana">ヴィル</div>
     </div>
 
+     <div class="card">
+      <img src="img/IMG_4207.jpeg">
+      <div class="name">Nyarlin</div>
+      <div class="furigana">ニャーリン</div>
+    </div>
+
     <div class="card">
       <img src="img/IMG_4284.jpeg">
       <div class="name">Fall</div>
       <div class="furigana">フォール</div>
+    </div>
+
+       <div class="card">
+      <img src="img/IMG_4212.jpeg">
+      <div class="name">雷電 千乃</div>
+      <div class="furigana">らいでん ちの</div>
     </div>
 
   </div>
