--- a/index.html
+++ b/index.html
@@ -57,16 +57,40 @@
       <div class="furigana">ヴィル</div>
     </div>
 
+      <div class="card">
+      <img src="img/IMG_4137.jpeg">
+      <div class="name">Summer Vice</div>
+      <div class="furigana">サマー・ヴァイス</div>
+    </div>
+
      <div class="card">
       <img src="img/IMG_4207.jpeg">
       <div class="name">Nyarlin</div>
       <div class="furigana">ニャーリン</div>
     </div>
 
+      <div class="card">
+      <img src="img/IMG_4125.jpeg">
+      <div class="name">火村 アイコ</div>
+      <div class="furigana">ひむら アイコ</div>
+    </div>
+
     <div class="card">
       <img src="img/IMG_4284.jpeg">
       <div class="name">Fall</div>
       <div class="furigana">フォール</div>
+    </div>
+
+      <div class="card">
+      <img src="img/IMG_3858.jpeg">
+      <div class="name">星川 まひる</div>
+      <div class="furigana">ほしかわ まひる</div>
+    </div>
+
+      <div class="card">
+      <img src="img/IMG_4122.jpeg">
+      <div class="name">Yacht</div>
+      <div class="furigana">ヨット</div>
     </div>
 
        <div class="card">
