--- a/index.html
+++ b/index.html
@@ -88,6 +88,12 @@
     </div>
 
       <div class="card">
+      <img src="img/IMG_3791.jpeg">
+      <div class="name">Miya</div>
+      <div class="furigana">ミヤ</div>
+    </div>
+
+      <div class="card">
       <img src="img/IMG_4122.jpeg">
       <div class="name">Yacht</div>
       <div class="furigana">ヨット</div>
